# MainstreamMinds

./: README.md  docker-compose.yaml
backend/: .env.sample  .gitignore  Dockerfile  README.md  database.db  database.sql  dump.rdb  pyproject.toml
backend/app/: db.py  main.py  settings.py
backend/app/core/: security.py  trending_cache.py
backend/app/data/: institutions.json  research_stories.json  user_researcher.json
backend/app/models/: __init__.py  base.py  comment.py  exception.py  filter.py  institution.py  pagination.py  research_story.py  researcher.py  security.py  sorting.py  tag.py  user.py  usertaglink.py
backend/app/repositories/: __init__.py  base.py  comment.py  institution.py  research_story.py  researcher.py  tag.py  user.py
backend/app/routers/: __init__.py  comment.py  institution.py  populate.py  research_story.py  researcher.py  tag.py  user.py
backend/app/services/: comment.py  institution.py  research_story.py  researcher.py  tag.py  user.py
backend/app/utils/: exceptions.py  model.py  singleton.py
backend/tests/: conftest.py  test_filter.py
backend/tests/test_repositories/: database.db  test_user_repository.py
db/: init.sql
frontend/mainstream-minds/: .env.sample  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/mainstream-minds/public/: index.html  manifest.json
frontend/mainstream-minds/src/: App.js
frontend/mainstream-minds/src/api/: msmAPI.js  msmLogin.js
frontend/mainstream-minds/src/context/: AuthProvider.jsx  ContextProvider.jsx
frontend/mainstream-minds/src/hooks/: useGlobal.js  useLocalStorage.js  useMsmApi.js  usePersistentAuth.js  useResize.js
frontend/mainstream-minds/src/screens/: AccountScreen.jsx  DiscoverScreen.jsx  LogInScreen.jsx  PreviewStoryScreen.jsx  (+7 more)
(+42 files in other folders)
