[tool.poetry]
name = "research stories"
version = "0.0.0"
description = "Backend for research stories"
authors = ["Eric Holmstrom <eric.holmstrom.sydney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.18.2"
python-jose = "^3.3.0"
cryptography = "^37.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
